<resources>
    <string name="app_name">LayoutExample</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login_username">Username</string>
    <string name="login_sign_in">Sign in</string>
    <string name="login_forgot_password">Forgot password?</string>
    <string name="login_password">Password</string>
    <string name="login_remember_me">Remember me</string>
    <string name="login_register">Register</string>
    <string name="login_sign_in_short">Sign in</string>
    <string name="login_wifi_notification">Please enter your credentials</string>
</resources>
