<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context=".MainActivity"
                android:background="@drawable/login_bg">

        <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true"
                android:clipToPadding="false"
                android:scrollbarStyle="outsideOverlay">

                <RelativeLayout
                        xmlns:android="http://schemas.android.com/apk/res/android"
                        xmlns:tools="http://schemas.android.com/tools"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        tools:showIn="@layout/activity_login">

                        <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:gravity="center_horizontal"
                                android:paddingBottom="@dimen/login_wifi_notification_height"
                                android:paddingTop="@dimen/login_wifi_notification_height"
                                android:paddingLeft="15dp"
                                android:paddingRight="15dp"
                                android:orientation="vertical">

                                <ImageView
                                        android:id="@+id/image_logo"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:src="@mipmap/ic_launcher"
                                        android:layout_marginBottom="@dimen/logo_bottom_margin"/>

                                <LinearLayout
                                        android:layout_width="match_parent"
                                        android:layout_height="wrap_content"
                                        android:orientation="vertical"
                                        android:background="@drawable/login_fields_bg">

                                        <EditText
                                                android:id="@+id/text_username"
                                                android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                android:padding="15dp"
                                                android:hint="@string/login_username"
                                                android:inputType="textEmailAddress"
                                                android:maxLines="1"
                                                android:textSize="@dimen/text_size_standard"
                                                android:fontFamily="sans-serif-light"
                                                android:textColor="@color/primary_text"
                                                android:singleLine="true"
                                                android:background="@android:color/transparent"/>

                                        <View
                                                android:layout_width="match_parent"
                                                android:layout_height="@dimen/divider_horizontal_height"
                                                android:background="@color/divider"/>

                                        <EditText
                                                android:id="@+id/text_password"
                                                android:layout_width="match_parent"
                                                android:layout_height="wrap_content"
                                                android:padding="15dp"
                                                android:hint="@string/login_password"
                                                android:imeActionLabel="@string/login_sign_in_short"
                                                android:imeOptions="actionDone"
                                                android:inputType="textPassword"
                                                android:maxLines="1"
                                                android:fontFamily="sans-serif-light"
                                                android:textColor="@color/primary_text"
                                                android:singleLine="true"
                                                android:background="@android:color/transparent"/>

                                </LinearLayout>

                                <RelativeLayout
                                        android:id="@+id/layout_remember_me"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_gravity="left"
                                        android:orientation="horizontal"
                                        android:layout_marginTop="10dp"
                                        android:padding="10dp"
                                        android:background="?attr/selectableItemBackground">

                                        <CheckBox
                                                android:id="@+id/checkbox_remember_me"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:layout_centerVertical="true"
                                                android:clickable="false"
                                                tools:checked="true"/>

                                        <TextView
                                                android:id="@+id/button_remember_me"
                                                android:layout_width="wrap_content"
                                                android:layout_height="wrap_content"
                                                android:layout_centerVertical="true"
                                                android:layout_toRightOf="@+id/checkbox_remember_me"
                                                android:textSize="@dimen/text_size_standard"
                                                android:layout_marginLeft="10dp"
                                                android:textColor="@android:color/white"
                                                android:clickable="false"
                                                android:text="@string/login_remember_me"/>

                                </RelativeLayout>

                                <Button
                                        android:id="@+id/button_login"
                                        android:layout_width="match_parent"
                                        android:layout_height="70dp"
                                        android:layout_marginTop="10dp"
                                        android:layout_marginBottom="25dp"
                                        android:text="@string/login_sign_in"
                                        android:textSize="@dimen/text_size_standard"
                                        android:textColor="@android:color/white"
                                        android:background="@drawable/login_button_bg"
                                        android:textStyle="bold"/>

                                <Button
                                        android:id="@+id/button_forgot_password"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginBottom="10dp"
                                        android:padding="10dp"
                                        android:textSize="@dimen/text_size_standard"
                                        android:textColor="@android:color/white"
                                        android:textStyle="bold"
                                        android:background="?attr/selectableItemBackground"
                                        android:text="@string/login_forgot_password"/>

                                <Button
                                        android:id="@+id/button_register"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:layout_marginBottom="10dp"
                                        android:padding="10dp"
                                        android:textSize="@dimen/text_size_standard"
                                        android:textColor="@android:color/white"
                                        android:textStyle="bold"
                                        android:background="?attr/selectableItemBackground"
                                        android:text="@string/login_register"/>

                        </LinearLayout>
                </RelativeLayout>

        </ScrollView>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="@dimen/login_wifi_notification_height"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:text="@string/login_wifi_notification"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_small"
                android:background="@color/transparent_black_sixty_percent" />

</RelativeLayout>